# RDTM

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.secure  README.md  SECURITY.md  config.py  continuous_test_processor.py   database.py  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.secure.yml  docker-compose.yml  enhanced_symlink_manager.py   failure_handler.py  install-rdtm.sh  main.py  main_dual_thread.py    pytest.ini  rd_client.py  requirements.txt  start-dev.sh  symlink_checker.py  symlinks_scanner.py  torrent_manager.py  torrent_validator.py  unified_rate_limiter.py   utils.py
.github/workflows/: ci.yml  security.yml
backend/: .flake8  Dockerfile  main.py  pyproject.toml  real_debrid_service.py  requirements-dev.txt  requirements.txt
backend/api/routes/: torrents.py
backend/app/api/: routes.py
backend/app/core/: config.py  scheduler.py  websocket.py
backend/app/db/: database.py  models.py
backend/app/services/: symlink_service.py  torrent_service.py
backend/authentication/: jwt_auth.py  views.py
backend/config/: settings.py
backend/core/: encryption.py  rate_limiting.py  security.py
backend/docs/: openapi.yaml
backend/monitoring/: metrics.py
backend/services/: torrent_queue.py
backend/tests/: test_authentication.py  test_torrent_queue.py
backend/utils/: logger.py
docs/: api.md
frontend/: .eslintrc.js  Dockerfile  jest.config.js  package-lock.json  package.json  svelte.config.js  vite.config.js
frontend/src/: app.html
frontend/src/components/: TorrentQueue.svelte
frontend/src/lib/: api.js  websocket.js
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/symlinks/: +page.svelte
frontend/src/routes/torrents/: +page.svelte
monitoring/: prometheus.yml
scripts/benchmark/: generate_secrets.py  performance_test.py
tests/: conftest.py  test_api.py  test_real_debrid_service.py  test_security.py
