[tool.poetry]
name = "rdtm-backend"
version = "1.0.0"
description = "RDTM API"
authors = ["RDTM"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
requests = "^2.31.0"
apscheduler = {extras = ["sqlalchemy"], version = "^3.10.0"}
websockets = "^12.0"
aiofiles = "^23.2.0"
loguru = "^0.7.2"
python-multipart = "^0.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"